# airtwin

./: .dockerignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  Session_update.md  cloudbuild.yaml  data_sanity_check.py  pyproject.toml  task.md
docs/: team_runbook.md
models/: hist_gb_breach_30min.joblib  random_forest_breach_30min.joblib
src/: app.py  closed_loop.py  data_loader.py  evaluation.py  features.py  ml_model.py  recommender.py  rule_model.py  simulator.py
