[project]
name = "airtwin"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.3",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pydantic>=2.13.4",
    "scikit-learn>=1.9.0",
    "streamlit>=1.58.0",
    "xgboost>=3.3.0",
]
